--- a/public/index.html
+++ b/public/index.html
@@ -137,18 +137,16 @@
     <div class="header__lang">
   
           <ul  style="display: flex; column-gap: 15px; ">
-              <li><a href="https://opensea.io/collection/" class="_active">
+              <li><a href="https://opensea.io/collection/boredboneheads" class="_active">
                   <img src="https://user-images.githubusercontent.com/35243/140804979-0ef11e0d-d527-43c1-93cb-0f48d1aec542.png" wifth="auto" height="36px"></a></li>
-              <li><a href="https://www.instagram.com//" class="_active">
+              <li><a href="https://www.instagram.com/satoshi_uzumaki" class="_active">
                   <img src="https://www.pinclipart.com/picdir/big/520-5201494_smiley-face-circle-transparent-background-instagram-icon-clipart.png" wifth="auto" height="36px"></a></li>
-              <li><a href="https://twitter.com/" class="_active">
+              <li><a href="https://twitter.com/SatoshiUzu" class="_active">
                   <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" wifth="auto" height="36px"></a></li>
               <li><a href="https://discord.com/invite/" class="_active">
                   <img src="https://www.freepnglogos.com/uploads/discord-logo-png/discord-logo-logodownload-download-logotipos-1.png" wifth="auto" height="40px"></a></li>
               <li><a href="https://web.facebook.com//" class="_active">
-                  <img src="https://freepikpsd.com/file/2019/10/facebook-icon-round-png-Transparent-Images.png" wifth="auto" height="40px"></a></li>
-              <li><a href="https://t.me/" class="_active">
-                  <img src="https://www.freepnglogos.com/uploads/telegram-png/telegram-software-wikipedia-2.png" wifth="auto" height="40px"></a></li>
+            
               </ul>
   </div>
 
@@ -180,7 +178,7 @@
                   <h1 class="promo__heading">Bored Boneheads</h1>
                                           <div class="promo__info">Get your Bored Bonehead Now!</div>
                                       <div class="promo__button-wrapper">
-                      <a href="#" class="button js-anchor"><i><i>Buy on Opensea!</i></i></a>
+                      <a href="https://opensea.io/collection/boredboneheads" class="button js-anchor"><i><i>Buy on Opensea!</i></i></a>
                   </div>
               </div>
                       <div class="promo__scroller js-promo-scroller"></div>
@@ -250,7 +248,7 @@
                               <div class="project__content">
                                   <div class="project__title">Bored Boneheads</div>
                                                    <div class="project__desc">
-                               <p>Bored Boneheads collection will be available in Opensea and possibly other market places. A limited edition collection of 3D animated versions may be offered soon.</p>
+                               <p>Bored Boneheads collection will be available in Opensea and possibly other market places. </p>
                                       </div>
                                                                   </div>
                           </div>
@@ -265,7 +263,7 @@
                               <div class="project__content">
                                   <div class="project__title">Bored Boneheads</div>
                                   <div class="project__desc">
-              <p>Bored Boneheads collection will be available in Opensea and possibly other market places. A limited edition collection of 3D animated versions may be offered soon.</p>
+              <p>Bored Boneheads collection will be available in Opensea and possibly other market places. </p>
                      </div>
                                                                   </div>
                           </div>
@@ -280,7 +278,7 @@
                               <div class="project__content">
                                   <div class="project__title">Bored Boneheads</div>
                                   <div class="project__desc">
-              <p>Bored Boneheads collection will be available in Opensea and possibly other market places. A limited edition collection of 3D animated versions may be offered soon.</p>
+              <p>Bored Boneheads collection will be available in Opensea and possibly other market places. </p>
                      </div>
                                                                   </div>
                           </div>
@@ -350,21 +348,16 @@
 
                   <div class="footer__social">
                       <ul  style="display: flex; column-gap: 15px; ">
-                          <li><a href="https://opensea.io/collection/" class="_active">
+                          <li><a href="https://opensea.io/collection/boredboneheads" class="_active">
                               <img src="https://user-images.githubusercontent.com/35243/140804979-0ef11e0d-d527-43c1-93cb-0f48d1aec542.png" wifth="auto" height="36px"></a></li>
-                          <li><a href="https://www.instagram.com//" class="_active">
+                          <li><a href="https://www.instagram.com/satoshi_uzumaki" class="_active">
                               <img src="https://www.pinclipart.com/picdir/big/520-5201494_smiley-face-circle-transparent-background-instagram-icon-clipart.png" wifth="auto" height="36px"></a></li>
-                          <li><a href="https://twitter.com/" class="_active">
+                          <li><a href="https://twitter.com/SatoshiUzu" class="_active">
                               <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" wifth="auto" height="36px"></a></li>
-                          <li><a href="https://discord.com/invite/" class="_active">
-                              <img src="https://www.freepnglogos.com/uploads/discord-logo-png/discord-logo-logodownload-download-logotipos-1.png" wifth="auto" height="40px"></a></li>
-                          <li><a href="https://web.facebook.com//" class="_active">
-                              <img src="https://freepikpsd.com/file/2019/10/facebook-icon-round-png-Transparent-Images.png" wifth="auto" height="40px"></a></li>
-                          <li><a href="https://t.me/" class="_active">
-                              <img src="https://www.freepnglogos.com/uploads/telegram-png/telegram-software-wikipedia-2.png" wifth="auto" height="40px"></a></li>
+                    
                           </ul>
 
-  </div>                    <div class="footer__developer"><a class="footer__developer-icon" href="http://faizanasad.com" target="_blank"></a></div>
+  </div>                    <div class="footer__developer"><a class="footer__developer-icon" href="#" target="_blank"></a></div>
               </div>
           </div>
       </footer>
