--- a/public/index.html
+++ b/public/index.html
@@ -296,6 +296,14 @@
                           </div>
   </section>
   
+  <section class="js-section " style="justify-content: space-evenly;display: flex;flex-direction: column;flex-wrap: wrap;align-content: space-around;align-items: center;padding-top: 160px;">
+    <div class="promo__button-wrapper">
+    
+    
+        <a href="https://raritysniper.com/nft-drops-calendar" class="button js-anchor"><i><i><img src="https://raritysniper.com/favicon.png" width="30px" style="margin-bottom:-10px"> View on Rarity Sniper!</i></i></a>
+    </div>
+  </section>
+
 
   <section id="team" class="vacancies js-section" data-section="vacancies" data-menu="black">
           <div class="vacancies__head">
